// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the IconButton Component correctly 1`] = `
<button
  className="sc-bdVaJa ihoFrn"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-bwzfXH dsDeun"
    color={undefined}
    scale={undefined}
  >
    check_circle
  </i>
</button>
`;

exports[`renders the IconButton Component correctly 2`] = `
<button
  className="sc-bdVaJa ihoFrn"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-bwzfXH ijHipX"
    color="success"
    scale="l"
  >
    check_circle
  </i>
</button>
`;

exports[`renders the IconButton Component correctly 3`] = `
<button
  className="sc-bdVaJa ihoFrn"
  onClick={[Function]}
>
  <i
    className="material-icons  sc-bwzfXH gRUyyv"
    color="success"
    scale="l"
  >
    autorenew
  </i>
</button>
`;
